--- a/main.css
+++ b/main.css
@@ -15,12 +15,12 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f7f4f4;
+  background-color: #f7f4f4 !important;
   color: #333;
   line-height: 1.6;
 }
@@ -48,6 +48,7 @@ body {
 }
 
 section {
+  
   padding: 40px;
   text-align: center;
 }
@@ -58,6 +59,7 @@ section {
   flex-direction: column;
   justify-content: center;
   background-color: #f7f7f7;
+  gap: 20px;
 }
 
 .section-title { 
@@ -89,17 +91,18 @@ section {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3 ease;
   text-align: center;
-  width: 300px;
-  height: 400px;
+  width: 600px;
+  height: 435px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between;  
 }
 
 .card h3 {
   font-size: 1.5rem;
   margin-bottom: 10px;
   color: #4c4c4c;
+    
 }
 
 .card p {
@@ -119,6 +122,7 @@ section {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
+
 .more-btn { 
   display: inline-block;
   margin-top: 20px;
@@ -146,14 +150,6 @@ section {
   background-color: #f7f7f7; 
   padding: 40px 0;
   text-align: center;
-}
-
-.new-in-studio h2 {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 30px;
-  display: block;
-  color: #4c4c4c;
 }
 
 .exilis-info {
@@ -194,6 +190,127 @@ section {
   text-align: center;
 }
 
+.about-us {
+  background-color: #f7f7f7; 
+  padding: 50px 0;
+  margin: 20px;
+}
 
+.container {
+  width: 80%;
+  max-width: 1200px;
+}
+ 
+.about-us-content { 
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px solid #d8bfa8; 
+  padding: 25px; /* Зголемен внатрешен простор */
+  width: 100%; /* Користи ја целосната ширина на родителскиот елемент */
+  box-sizing: border-box; /* Padding нема да влијае на ширината */
+  border-radius: 15px; /* Повеќе заоблени агли */
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); /* Суптилна сенка за длабочина */
+}
 
+ .about-us-image {
+  width: 50%;
+} 
+  
+.about-us-image img {
+  width: 100%; 
+  height: auto;
+  display: block;
+  border-radius: 5px;
+ }
+  
+.about-us-text {
+  width: 45%;
+  
+}
+    
+.about-us-text p {
+  font-size: 1rem;
+  color: #333;
+}
 
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+footer{
+  background-color: #d8bfa8;
+
+}
+.footerContainer{
+  width: 100%;
+  padding: 40px 30px 20px ;
+}
+.socialIcons{
+  display: flex;
+  justify-content: center;
+}
+.socialIcons a{
+  text-decoration: none;
+  padding:  10px;
+  background-color: white;
+  margin: 0.9px;
+  border-radius: 50%;
+}
+.socialIcons a i{
+  font-size: 1em;
+  color: black;
+  opacity: 0,9;
+}
+
+.socialIcons a:hover{
+  background-color: #111;
+  transition: 0.5s;
+}
+.socialIcons a:hover i{
+  color: white;
+  transition: 0.5s;
+}
+.footerNav{
+  margin: 10px 0;
+  
+}
+.footerNav ul{
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  gap: 0.5px;
+}
+.footerNav ul li a{
+  color: whitesmoke; /* koja boja mi odgovara nz*/
+  margin: 10px;
+  text-decoration: none;
+  font-size: 1.3em;
+  opacity: 1;
+  transition: 0.5s;
+ 
+}
+
+.footerNav ul li a:hover{
+  opacity: 1;
+}
+.footerBottom{
+  background-color: #bba188;
+  padding: 5px;
+  text-align: center;
+}
+.footerBottom p{
+  color: white;
+}
+.designer{
+  opacity: 0.7;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 400;
+  margin: 0px 5px;
+}
+
+  
+  
